Fix hover effect by adding missing background-color property

--- a/style.css
+++ b/style.css
@@ -15,4 +15,5 @@ body {
 
 a:hover {
     color: black
+    background-color: yellow;
 }
